--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       updateStatus("Carregando comprovante Pix...");
 
-      fetch("/send-location", {
+      fetch("/api/send-location", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
